--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -20,7 +20,7 @@
       </ImageView>
         <TextField fx:id="username" layoutX="215.0" layoutY="140.0" onKeyPressed="#handleUsernamePressed" prefHeight="25.0" prefWidth="171.0" promptText="Username" />
         <PasswordField fx:id="password" layoutX="215.0" layoutY="175.0" onKeyPressed="#handlePasswordPressed" prefHeight="25.0" prefWidth="171.0" promptText="Password" />
-        <ComboBox fx:id="choiceServer" layoutX="215.0" layoutY="213.0" prefHeight="25.0" prefWidth="171.0" />
-        <Button fx:id="login" layoutX="270.0" layoutY="261.0" mnemonicParsing="false" text="Login" />
+        <ComboBox fx:id="choiceServer" layoutX="215.0" layoutY="213.0" onKeyPressed="#handleChoiceServerPressed" prefHeight="25.0" prefWidth="171.0" />
+        <Button fx:id="login" layoutX="270.0" layoutY="261.0" onKeyPressed="#handleLoginPressed"  mnemonicParsing="false" text="Login" />
     </children>
 </AnchorPane>
